--- a/config/locales/mk.yml
+++ b/config/locales/mk.yml
@@ -3,6 +3,8 @@ mk:
     time: 
         formats: 
             votd: "%B %-d, %Y"
+    counter: 
+        format: "999.999.999"
     social: 
         intro page: 
             main heading: "Разговор и откривање"
@@ -634,7 +636,7 @@ mk:
             notification errors: "Следниве грешка(и) спречија ажурирање на твоите пораки:"
             edit: "Уреди"
             bio: "Биографија"
-            complete_first_last: "Complete your profile by filling in your first and last name"
+            complete_first_last: "Комплетирај го твојот профил со внесување на твоето име и презиме"
         password: 
             updated: "Успешно ја ажурира својата лозинка."
             error: "Имаше грешка при менувањето на лозинката."
@@ -643,6 +645,7 @@ mk:
             badges: "Извести ме за беџевите што ги добив."
             follower: "Извести ме кога некој ме следи."
             newsletter: "Извести ме за нови вести од YouVersion."
+            contact_joins: "Извести ме кога еден од моите контакти ќе се приклучи"
             note_like: "Извести ме кога на некој му се допаѓаат моите белешки."
             reading_plans: "Извести ме за информации околу плановите за читање кои ги почнав."
             publishing partners: "Информирај ме за новости од партнерите на YouVersion."
@@ -911,6 +914,7 @@ mk:
         creation form errors: "Следниве грешки ја спречија донацијата:"
     download ad: 
         title: "Симни ја бесплатната Библиска Апликација"
+        description copy: "Стотици верзии во над %{language_count} различни јазици - Библијата која оди насекаде заедно со тебе."
         line 1: "Стотици верзии на 100 +"
         line 2: "различни јазици - Библија"
         line 3: "која е постојано со тебе."
@@ -958,7 +962,7 @@ mk:
     mobile page: 
         h2: "Божјиот збор е со тебе."
         h3: "YouVersion е глобално"
-        h3 sub: "Достапен во повеќе од 100 јазици."
+        h3 sub: "Достапна во над %{language_count} јазици ширум светот."
         main: "Десетици милиони луѓе ја користат Библиската Апликација™ за да го користат Божјиот збор како дел од нивниот секојдневен живот. Симни ја бесплатната апликација и имај пристап до твоите обележувачи, белешки, планови за читање, каде и да си. Уживај во стотици верзии, вклучувајќи и аудио, сето тоа на твојот мобилен телефон."
         button h4: "Оди до Bible.com/app"
         button h4 sub: "На твојот мобилен уред"
@@ -979,6 +983,7 @@ mk:
         symbian: "Symbian"
         mobile web: "Mobile Web"
         amazon: "Kindle Fire"
+        free overlay: "100% бесплатно"
     pages: 
         generic_error: 
             title: "Упс!"
