--- a/config/locales/pt-PT.yml
+++ b/config/locales/pt-PT.yml
@@ -3,6 +3,8 @@ pt-PT:
     time: 
         formats: 
             votd: "%-d %B %Y"
+    counter: 
+        format: "999 999 999"
     social: 
         intro page: 
             main heading: "Conversa & Descoberta"
@@ -210,8 +212,8 @@ pt-PT:
     save: "Guardar"
     cancel: "Cancelar"
     try the beta: "Experimente a versão Beta"
-    welcome to the beta: "Welcome to Bible.com!"
-    highlight: "Highlight Verse"
+    welcome to the beta: "Bem-vindo à Bible.com!"
+    highlight: "Destacar Versículo"
     comment: "Novo Comentário"
     note: "Nova Nota"
     selected: "Selecionado"
@@ -220,7 +222,7 @@ pt-PT:
     notes title: "Notas"
     friends: "Amigos"
     groups: "Grupos"
-    mobile: "Mobile Apps"
+    mobile: "Aplicações móveis"
     live: "Ao Vivo/Grupos"
     first page: "Primeira Página"
     last page: "Última Página"
@@ -251,12 +253,12 @@ pt-PT:
         users like this: "%{last_liker_link} e %{more_link} gostam disto"
         vod: 
             title: "Versículo do dia"
-            get daily email: "Get daily email"
+            get daily email: "Receber e-mail diário"
             subscribe: "Subscrever"
             update: "Atualizar"
-            unsubscribe: "Unsubscribe"
+            unsubscribe: "Cancelar subscrição"
             version: "Versão"
-            view more: "View More"
+            view more: "Ver mais"
             time: "Tempo"
         friendship: 
             now friends: "Você é agora amigo/a de"
@@ -283,7 +285,7 @@ pt-PT:
             edit highlight title: "Editar este destaque"
             edit bookmark title: "Editar este marcador"
             edit note title: "Editar esta nota"
-            edit subscription: "Edit subscription"
+            edit subscription: "Editar subscrição"
             delete: "Apagar"
             delete confirm: "Tem a certeza?"
             delete highlight title: "Apagar este destaque"
@@ -355,8 +357,8 @@ pt-PT:
             add friend button title: "Enviar a %{user} o pedido de amizade"
             accept button: "Aceitar"
             accept request button: "Aceitar pedido"
-            ignore button: "Decline"
-            ignore request button: "Decline request"
+            ignore button: "Recusar"
+            ignore request button: "Rejeitar pedido"
     notes: 
         none user: "%{username} ainda não tem notas criadas."
         blank slate: 
@@ -394,7 +396,7 @@ pt-PT:
         all notes: "Todas as Notas"
         community notes: "Notas da Comunidade"
         new note: "Nova Nota"
-        status field: "Note Status:"
+        status field: "Estado da nota"
         edit: "Editar"
         delete: "Apagar Esta Nota"
         confirm delete: "Sim, tenho a certeza"
@@ -407,7 +409,7 @@ pt-PT:
         create failure: "Erro ao gravar a nota"
         destroy success: "Nota eliminada"
         destroy failure: "Erro ao remover a nota"
-        update success: "Note updated"
+        update success: "Nota atualizada"
     ref: 
         loading secondary: "A Carregar a Referência na Versão Secundária..."
         clear verses: "Limpar Versículos Selecionados"
@@ -469,21 +471,21 @@ pt-PT:
         edit notifications: "Gerir Notificações"
         edit connections: "Contas Associadas"
         edit devices: "Dispositivos Associados"
-        vod_subscriptions: "Verse of the Day Subscriptions"
-        vod_subscription success: "You have successfully updated your Verse of the Day subscription!"
-        vod_subscription failure: "Sorry, there was a problem updating your Verse of the Day subscription."
-        daily email delivery: "Daily email delivery"
+        vod_subscriptions: "Subscrição do Versículo do dia"
+        vod_subscription success: "Alterou com sucesso a sua subscrição do Versículo do Dia!"
+        vod_subscription failure: "Desculpe mas houve um problema ao atualizar a sua subscrição do versículo do dia. "
+        daily email delivery: "Definições do email diário "
         time: "Tempo"
-        daily push notifications: "Daily push notifications for mobile apps"
+        daily push notifications: "Alertas de notificação para apps"
         subscribe: "Subscrever"
-        unsubscribe: "Unsubscribe"
+        unsubscribe: "Cancelar subscrição"
         edit account_existence: "Apagar Conta"
         delete account button: "Apagar a Minha Conta YouVersion"
         no devices: "Não tem dispositivos associados à sua Conta YouVersion"
         no devices download copy: "Baseada na Bíblia online, YouVersion.com, a App da Bíblia é uma Bíblia online gratuita que pode ser instalada em praticamente todos os smartphones. A App da Bíblia permite aos utilizadores lerem a Bíblia, partilhar versículos nas suas redes sociais, marcar as suas passagens favoritas e mais—tudo num formato que acompanha um estilo de vida cada vez mais móvel. Visite <a href='https://www.bible.com/app'>bible.com/app</a> a partir do seu dispositivo móvel para descarregar a App da Bíblia e associar à sua conta!"
         yes delete: "Sim, Apagar a Minha Conta"
         account delete success: "A sua conta YouVersion foi apagada com sucesso. Esperamos que continue a encontrar formas significativas de interação com a Bíblia. Algumas destas apps podem ajudar no seu progresso: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-        delete account description: "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within Bible.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
+        delete account description: "Se apagar a sua conta, eliminará permanentemente toda a sua informação, histórico e personalização (como as notas, marcadores, destaques, etc) em Bible.com e na App da Bíblia. Isto não poderá ser revertido por si ou por nós. Caso tenha a certeza de que deseja continuar, por favor prossiga abaixo."
         user recent activity: "Atividade Recente de %{user}"
         my notes: "Notas"
         user notes: "Notas de %{user}"
@@ -634,7 +636,7 @@ pt-PT:
             notification errors: "O(s) erro(s) seguinte(s) impede(m) de atualizar as suas notificações:"
             edit: "Editar"
             bio: "Biografia"
-            complete_first_last: "Complete your profile by filling in your first and last name"
+            complete_first_last: "Complete o seu perfil preenchendo o seu nome e sobrenome"
         password: 
             updated: "Atualizou a sua palavra-passe com sucesso!"
             error: "Desculpe, houve um erro na alteração da sua palavra-passe."
@@ -643,6 +645,7 @@ pt-PT:
             badges: "Notificar-me sobre medalhas que tenha ganho."
             follower: "Notificar-me quando alguém me segue."
             newsletter: "Manter-me atualizado sobre anúncios YouVersion."
+            contact_joins: "Informar-me quando houver um registo dos meus Contatos"
             note_like: "Notificar-me quando alguém faz Gosto às minhas notas."
             reading_plans: "Notificar-me com informação de planos de leitura que comecei."
             publishing partners: "Atualizem-me com notícias dos parceiros de conteúdo YouVersion."
@@ -911,6 +914,7 @@ pt-PT:
         creation form errors: "O(s) seguinte(s) erro(s) não permite(m) efetuar a doação:"
     download ad: 
         title: "Transfira Gratuitamente a App da Bíblia"
+        description copy: "Centenas de versões em mais de %{language_count} línguas diferentes - a Bíblia que vai consigo para todo o lado."
         line 1: "Centenas de versões em mais de 100"
         line 2: "idiomas - a Bíblia que"
         line 3: "vai consigo para todo o lado"
@@ -938,7 +942,7 @@ pt-PT:
         facebook: "YouVersion no Facebook"
         twitter: "YouVersion no Twitter"
         support: "Necessita de ajuda no YouVersion?"
-        lead copy: "Based on the online Bible, Bible.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more—all in a format that keeps up with their increasingly mobile lifestyle."
+        lead copy: "Baseada na Bíblia on-line Bible.com, a App da Bíblia é uma Bíblia online gratuita que pode ser instalada em praticamente qualquer smartphone. A App da Bíblia permite aos utilizadores lerem a Bíblia, partilhar versículos nas suas redes sociais, marcar as suas passagens favoritas e mais — tudo num formato que acompanha um estilo de vida cada vez mais móvel."
         resources title: "Recursos para Imprensa"
         now title: "Hoje na Comunidade YouVersion"
         resources: 
@@ -958,7 +962,7 @@ pt-PT:
     mobile page: 
         h2: "A Palavra de Deus está consigo."
         h3: "YouVersion é Global"
-        h3 sub: "Disponível em mais de 100 idiomas em todo o mundo."
+        h3 sub: "Disponível em mais de %{language_count} línguas em todo o mundo."
         main: "Dezenas de milhões de pessoas estão a usar a App da Bíblia™ para fazerem da Palavra de Deus uma parte da sua vida. Transfira a app gratuita e aceda aos seus marcadores, notas, e planos de leitura em qualquer lugar. Desfrute de centenas de versões, incluindo áudio, tudo no seu dispositivo móvel."
         button h4: "Ir para Bible.com/app"
         button h4 sub: "No Seu Dispositivo Móvel"
@@ -979,6 +983,7 @@ pt-PT:
         symbian: "Symbian"
         mobile web: "Página Móvel"
         amazon: "Kindle Fire"
+        free overlay: "100% Gratuita"
     pages: 
         generic_error: 
             title: "Oops!"
@@ -1000,7 +1005,7 @@ pt-PT:
                 subscribe heading: "Subscreva um Plano de Leitura."
                 subscribe description: "Leia a Bíblia toda, escolha um tema específico, ou leia um devocional escrito por um entendido. Escolha o seu plano e a cada dia irá encontrar um trecho da Bíblia à sua espera."
                 download heading: "Leve a Bíblia consigo."
-                download description: "<a href='https://bible.com/download'>Download</a> the Bible App for free on any mobile device. When you use the mobile app, your notes, bookmarks, highlights, plans, and more will be automatically synced across all of your devices."
+                download description: "<a href='https://bible.com/download'>Transfira</a> gratuitamente a App da Bíblia em qualquer dispositivo móvel. Quando usar a App, as suas notas, marcadores, destaques e planos serão automaticamente sincronizados em todos os seus dispositivos."
             get started: "Comece com a sua conta gratuita."
             word with you: "A Palavra sempre consigo."
             download action: "Transfira a App da Bíblia"
