--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -3,6 +3,8 @@ uk:
     time: 
         formats: 
             votd: "%-d %B, %Y"
+    counter: 
+        format: "999 999 999"
     social: 
         intro page: 
             main heading: "Розмова і пізнання"
@@ -171,8 +173,8 @@ uk:
     sign up: "Зареєструватися"
     have an account: "Вже маєте обліковий запис?"
     no account: "Не маєте облікового запису?"
-    successful sign-in: "Підписано як %{user}!"
-    successful sign-out: "Підписано!"
+    successful sign-in: "Увійшли як %{user}!"
+    successful sign-out: "Вийдено!"
     invalid login: "Невірне ім'я або пароль"
     invalid password: "Невірний пароль"
     sign out: "Вийти"
@@ -273,7 +275,7 @@ uk:
             load more: "Завантажити ще"
             like: "Подобається"
             liked: "Сподобалось"
-            like title: "На кшталт цього"
+            like title: "Подібне цьому"
             last comment: "Останній коментар"
             share: "Поділитись"
             share title: "Поділитися цим з друзями або сім'єю"
@@ -316,7 +318,7 @@ uk:
             save button: "Допис"
     friends: 
         you have N friends: "У вас %{count} друзів"
-        none me: "Поширюйте віхи вашого пізнання Біблії на кшталт закладок, виділень та нотаток серед найближчих друзів та сім'ї…"
+        none me: "Поширюйте віхи вашого пізнання Біблії такі, як закладки, виділення та нотатки із найближчими друзями та членами родини."
         find friends: "Знайти друзів"
         blank slate: 
             heading: "Наразі немає друзів"
@@ -427,7 +429,7 @@ uk:
         invalid chapter text: "В даній версії відсутній вказаний розділ."
         invalid secondary chapter text: "В обраній вами другорядній версії відсутній розділ."
         no secondary version title: "Про паралельне порівняння"
-        no secondary version text: "Вибраною мовою %{language_name} доступний всього один переклад, тому переклад для паралельного порівняння не був вибраний. Будь ласка, виберіть переклад для порівняння."
+        no secondary version text: "Вибраною мовою %{language_name} доступний лише один переклад. Тому переклад для паралельного порівняння не був вибраний. Будь ласка, виберіть переклад для порівняння."
         select another chapter: "Оберіть інший розділ."
         view in reader: "Перегляньте %{reference} у програмі Читання"
     users: 
@@ -465,7 +467,7 @@ uk:
         edit password: "Змінити Пароль"
         edit password errors: "Наступна помилка(и) перешкодили зміні пароля:"
         picture: "Зображення"
-        edit picture: "Змінити Картинку"
+        edit picture: "Змінити зображення"
         edit notifications: "Робочі сповіщення"
         edit connections: "Приєднані профілі"
         edit devices: "Приєднані пристрої"
@@ -643,6 +645,7 @@ uk:
             badges: "Повідомляти про зароблені мною значки."
             follower: "Повідомляти мене, коли хтось слідкує за мною."
             newsletter: "Повідомляти мене про нові YouVersion Оголошення."
+            contact_joins: "Сповіщати мене, коли приєднується знайомий"
             note_like: "Повідомте мені, коли комусь сподобаються мої записи."
             reading_plans: "Повідомте мені інформацію про початий мною план читання."
             publishing partners: "Тримати мене в курсі новин від партнерів YouVersion."
@@ -911,6 +914,7 @@ uk:
         creation form errors: "При обробці пожертвування виникла така помилка(и):"
     download ad: 
         title: "Завантажте безкоштовну програму Біблії"
+        description copy: "Сотні версій %{language_count}різними мовами - Біблія, яка крокує скрізь із вами."
         line 1: "Сотні перекладів на 100+"
         line 2: "різних мов - це все Біблія"
         line 3: "що всюди прямує з вами."
@@ -958,7 +962,7 @@ uk:
     mobile page: 
         h2: "Слово Боже з Вами."
         h3: "YouVersion є глобальною програмою"
-        h3 sub: "Доступний в більш ніж 100 мовами у світі."
+        h3 sub: "Доступно на %{language_count} мов світу."
         main: "Десятки мільйонів людей використовують програму Біблія, щоб зробити Слово Боже частиною свого повсякденного життя. Завантажте безкоштовну додаток і отримаєте доступ до закладок, нотаток і планів читання з будь-якої точки світу. Насолоджуйтесь сотнями переказів, в тому числі аудіобіблією, - і все за допомогою свого мобільного пристрою."
         button h4: "Перейти на Bible.com/app"
         button h4 sub: "На Вашому мобільному телефоні"
@@ -979,6 +983,7 @@ uk:
         symbian: "Symbian"
         mobile web: "Мобільний Інтернет"
         amazon: "Kindle Fire"
+        free overlay: "Безкоштовно"
     pages: 
         generic_error: 
             title: "Йой!"
