--- a/config/locales/es-ES.yml
+++ b/config/locales/es-ES.yml
@@ -3,6 +3,8 @@ es-ES:
     time: 
         formats: 
             votd: "%-d %B, %Y"
+    counter: 
+        format: "999,999,999"
     social: 
         intro page: 
             main heading: "Conversación y descubrimiento"
@@ -210,8 +212,8 @@ es-ES:
     save: "Guardar"
     cancel: "Cancelar"
     try the beta: "Intenta la versión Beta"
-    welcome to the beta: "Welcome to Bible.com!"
-    highlight: "Highlight Verse"
+    welcome to the beta: "Bienvenido a Biblia.com"
+    highlight: "Resalta el versículo"
     comment: "Nuevo Comentario"
     note: "Nueva nota"
     selected: "Seleccionado"
@@ -220,7 +222,7 @@ es-ES:
     notes title: "Notas"
     friends: "Amigos"
     groups: "Grupos"
-    mobile: "Mobile Apps"
+    mobile: "Aplicaciones para móviles"
     live: "En Directo/Grupos"
     first page: "Primera página"
     last page: "Última página"
@@ -355,8 +357,8 @@ es-ES:
             add friend button title: "Enviar a %{user} una petición de amistad"
             accept button: "Aceptar"
             accept request button: "Petición aceptada"
-            ignore button: "Decline"
-            ignore request button: "Decline request"
+            ignore button: "Declinar"
+            ignore request button: "Declinar petición"
     notes: 
         none user: "%{username} todavía no ha tomado notas"
         blank slate: 
@@ -394,7 +396,7 @@ es-ES:
         all notes: "Todas las notas"
         community notes: "Notas de la Comunidad"
         new note: "Nueva Nota"
-        status field: "Note Status:"
+        status field: "Estado de la nota:"
         edit: "Editar"
         delete: "Borrar esta nota"
         confirm delete: "Si, estoy seguro"
@@ -407,7 +409,7 @@ es-ES:
         create failure: "Error al guardar la nota"
         destroy success: "Nota borrada"
         destroy failure: "Error al borrar la nota"
-        update success: "Note updated"
+        update success: "Nota actualizada"
     ref: 
         loading secondary: "Cargando referencias en la segunda versión..."
         clear verses: "Limpiar versículos seleccionados"
@@ -483,7 +485,7 @@ es-ES:
         no devices download copy: "Basado en la Biblia online, YouVersion, la Biblia App es una Biblia gratis para móviles que puede ser instalada en casi cualquier dispositivo. La Biblia App permite a los usuarios leer la Biblia, compartir versículos en las redes sociales, marcar los pasajes preferidos y mucho más— todo en un formato que va contigo en tu vida cada vez más dinámica. Visita <a href='https://www.bible.com/app'>bible.com/app</a> desde tu dispositivo movil, descarga la Biblia App y conecta con tu cuenta de usuario."
         yes delete: "Si, eliminar mi cuenta"
         account delete success: "Tu cuenta YouVersion ha sido eliminada con éxito. Esperamos que sigas encontrando formas significativas de leer la Biblia. Algunas de estas aplicaciones pueden ser de gran ayuda para seguir adelante: <a href=http://www.youversion.com/free-bible-apps> http://youversion.com/free-bible-apps</a>"
-        delete account description: "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within Bible.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
+        delete account description: "Si borras tu cuenta, eliminarás permanentemente toda tu información, historial, y personalización (notas, destacados, subrayados, etc.) en Biblia.com y la Biblia.App. Esta acción no puede deshacerse ni por ti ni por nuestro equipo. Si estás seguro de querer seguir adelante, procede según se indica más abajo."
         user recent activity: "Actividad reciente de %{user}"
         my notes: "Notas"
         user notes: "Notas de %{user}"
@@ -634,7 +636,7 @@ es-ES:
             notification errors: "Los siguientes errores impidieron la actualización de tus notificaciones:"
             edit: "Editar"
             bio: "Biografía"
-            complete_first_last: "Complete your profile by filling in your first and last name"
+            complete_first_last: "Completa tu perfil poniendo tu nombre y apellido"
         password: 
             updated: "¡Has actualizado tu contraseña con éxito!"
             error: "Lo sentimos, ha ocurrido un error al cambiar tu contraseña."
@@ -643,6 +645,7 @@ es-ES:
             badges: "Notificarme sobre las insignias que he ganado."
             follower: "Notificarme cuando alguien me siga."
             newsletter: "Mantenerme informado con los anuncios de YouVersion."
+            contact_joins: "Notify me when a Contact joins"
             note_like: "Notificarme cuando a alguien le gusten mis notas."
             reading_plans: "Notificarme con información sobre los planes de lectura que haya iniciado."
             publishing partners: "Mantenerme al día con las noticias de los socios de YouVersion."
@@ -911,6 +914,7 @@ es-ES:
         creation form errors: "El siguiente error(es) no ha permitido hacer la donación:"
     download ad: 
         title: "Descargar la Bible App gratis."
+        description copy: "Hundreds of versions in %{language_count}+ different languages - the Bible that goes with you anywhere."
         line 1: "Cientos de versiones en 100+"
         line 2: "diferentes idiomas - la Biblia"
         line 3: "que va contigo donde quieras."
@@ -938,7 +942,7 @@ es-ES:
         facebook: "YouVersion en Facebook"
         twitter: "YouVersion en Twitter"
         support: "¿Necesitas ayuda con YouVersion?"
-        lead copy: "Based on the online Bible, Bible.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more—all in a format that keeps up with their increasingly mobile lifestyle."
+        lead copy: "Basada en la Biblia online, Biblia.com, la Biblia App es una Biblia para móviles gratuita que puede ser instalada en casi cualquier teléfono. La Biblia App permite a los usuarios leer la Biblia, compartir versículos en redes sociales, crear destacados con los pasajes favoritos, y mucho más. Todo en un formato que te mantiene al día con el estilo cada vez más activo de los móviles."
         resources title: "Recursos para prensa"
         now title: "Hoy en la Comunidad YouVersion"
         resources: 
@@ -958,7 +962,7 @@ es-ES:
     mobile page: 
         h2: "La Palabra de Dios está contigo."
         h3: "YouVersion es Global"
-        h3 sub: "Disponible en más de 100 idiomas alrededor del mundo."
+        h3 sub: "Available in more than %{language_count} languages worldwide."
         main: "Decenas de millones de personas están usando la Biblia App™ para hacer que la Palabra de Dios sea parte de sus vidas diarias. Descarga la aplicación gratuita y accede a tus marcadores, notas, y planes de lectura en cualquier lugar. Disfruta de cientos de versiones, incluyendo audio Biblia, todo en tu dispositivo móvil."
         button h4: "Ir a la Bible.com/app"
         button h4 sub: "En tu dispositivo móvil"
@@ -979,6 +983,7 @@ es-ES:
         symbian: "Symbian"
         mobile web: "Red móvil"
         amazon: "Kindle Fire"
+        free overlay: "100% Free"
     pages: 
         generic_error: 
             title: "Uy!"
@@ -1000,7 +1005,7 @@ es-ES:
                 subscribe heading: "Subscríbete a planes de la Biblia."
                 subscribe description: "Abarca toda la Biblia, céntrate en un tema, o lee un devocional de un talentoso profesor. Elige tu plan y cada día encontrarás una selección de la Biblia esperando por ti."
                 download heading: "Lleva la Biblia contigo."
-                download description: "<a href='https://bible.com/download'>Download</a> the Bible App for free on any mobile device. When you use the mobile app, your notes, bookmarks, highlights, plans, and more will be automatically synced across all of your devices."
+                download description: "<a href='https://bible.com/download'>Descarga</a> la Biblia App gratis en cualquier dispositivo móvil. Cuando uses la aplicación del móvil, tus notas, marcadores, destacados, planes, y más serán automáticamente sincronizados en todos tus dispositivos."
             get started: "Comienza con tu nueva cuenta gratis."
             word with you: "La Palabra de Dios está contigo."
             download action: "Descarga la Biblia App"
