--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -3,6 +3,8 @@ hi:
     time: 
         formats: 
             votd: "%B %-d, %Y"
+    counter: 
+        format: "999,999,999"
     social: 
         intro page: 
             main heading: "वार्तालाप और खोज"
@@ -643,6 +645,7 @@ hi:
             badges: "मेरे द्वारा अर्जित badge की सूचना प्रधान करे।"
             follower: "मेरे अनुयायी के बारे में सूचना दे।"
             newsletter: "मुझे YouVersion घोषणाओं से अपडेट रखे।"
+            contact_joins: "Notify me when a Contact joins"
             note_like: "मेरे लेख के चहेतों की सूचना दे।"
             reading_plans: "मेरे द्वारा शुरू की गयी YouVersion पाठक योजना  की जानकारी सूचित करे।"
             publishing partners: "कृपया मुझे YouVersion सामग्री भागीदरों के समाचारों से अप्डैटड रखे।"
@@ -911,6 +914,7 @@ hi:
         creation form errors: "निम्नलिखित error(s) के कारण योगदान विफल हुआ:"
     download ad: 
         title: "मुफ्त बाइबिल App डाउनलोड कीजिए"
+        description copy: "Hundreds of versions in %{language_count}+ different languages - the Bible that goes with you anywhere."
         line 1: "100 से अधिक संस्करण"
         line 2: "बाइबिल अब अनेक भाषाओँ में"
         line 3: "हमेशा आपके साथ"
@@ -958,7 +962,7 @@ hi:
     mobile page: 
         h2: "प्रभु का वचन आपके साथ"
         h3: "YouVersion दुनिया भर में उपलब्ध"
-        h3 sub: "दुनिया भर में 100 से अधिक भाषाओँ में उपलब्ध"
+        h3 sub: "Available in more than %{language_count} languages worldwide."
         main: "100 से  अधिक संस्करणों का ऑडियो के साथ बाइबिल अपने मोबाइल पर पाइये। कई लाखों लोग इस बाइबिल App का उपयोग कर रहें हैं और प्रभु के वचन को उनके नित्य जीवन का अंग बना रहे हैं। मुफ्त App डाउनलोड करें और बुकमार्क्स, टिप्पणी, पाठक योजना दुनिया भर में कहीं से भी ऐक्सेस करे।"
         button h4: "Bible.com/app आजमा कर देखे"
         button h4 sub: "आपके मोबाइल पर"
@@ -979,6 +983,7 @@ hi:
         symbian: "Symbian"
         mobile web: "Mobile Web"
         amazon: "Kindle Fire"
+        free overlay: "100% Free"
     pages: 
         generic_error: 
             title: "Oops!"
