--- a/config/locales/km.yml
+++ b/config/locales/km.yml
@@ -3,6 +3,8 @@ km:
     time: 
         formats: 
             votd: "%B %-d, %Y"
+    counter: 
+        format: "៩៩៩.៩៩៩.៩៩៩"
     social: 
         intro page: 
             main heading: "Conversation & Discovery"
@@ -31,11 +33,11 @@ km:
                         time: "about 27 minutes ago"
                     field placeholder: "Write a comment..."
         widget: 
-            timeline: "Timeline"
-            no activity yet: "There hasn't been any activity yet."
+            timeline: "​កំណត់​ពេល​វេលា"
+            no activity yet: "មិន​ទាន់​មាន​សកម្ម​ភាព​ណាមួយ​នៅ​ឡើយ។"
         moment: 
-            read all: "Read all"
-            read less: "Read less"
+            read all: "ត្រូវ​បាន​អាន​ទាំង​អស់"
+            read less: "អាន​តិចតួច"
         share: "ចែក​រំលែក"
         add comment: "Add a comment"
         my connections: "បាន​ភ្ជាប់​ទៅ​គណនី"
@@ -81,10 +83,10 @@ km:
             description: "កម្មវិធីព្រះគម្ពីរត្រូវបានតម្លើងជាង ១០០ លាន​ដងហើយ ដែលជាព្រឹត្តិការណ៍ដ័មិនគួរឱ្យជឿ! តែយើងទើបតែចាប់​ផ្ដើមទេ ។​ សូមដោនឡូដកម្មវិធីព្រះគម្ពីរ​ឥតគិតថ្លៃនៅថ្ងៃនេះ​- ហើយចែកចាយ​ពី​កម្មវិធីនេះទៅ​មិត្តភក្ដិរបស់អ្នក​ ។ តោះ យើងបង្កើតប្រវតិ្តសាស្ដ្រជាមួយគ្នា ។​"
         mobile: 
             title: "កម្មវិធីព្រះគម្ពីរ"
-            description: "Read God’s Word at anytime, anywhere using the YouVersion Bible App. Share Scripture with friends, highlight and bookmark passages, and create a daily habit with Bible Plans. Available for iOS, Android, Blackberry, Windows Phone and more."
+            description: "អាន​ព្រះ​បន្ទូល​របស់​ព្រះ​ជាម្ចាស់គ្រប់ពេល​វេលា គ្រប់​ទី​កន្លែង ជាមួយ​នឹង កម្មវិធី​ព្រះ​គម្ពីរ​ YouVersion។ ចែក​ចាយ​ខ​គម្ពីរ​ជាមួយ​នឹង​មិត្ត​ភ័ក្ត្រ គូស​ពណ៌ និង គូស​ចំណាំខ​គម្ពីរ និង ​បង្កើត​ទំលាប់​ប្រចាំ​ថ្ងៃ​ជាមួយ​នឹង​គំរោង​ផែន​ការ​អានព្រះ​គម្ពីរ។ មាន​ជាមួយនឹង​ប្រព័ន្ធប្រតិបត្តិ​ការណ៍ iOS Android Blackberry Windows Phone និង ប្រព័ន្ធប្រតិបត្តិ​ការណ៍​ផ្សេងៗ​​ទៀត។"
         site: 
             title: "Bible.com"
-            description: "Bring the beauty and truth of the Bible into everyday life. With the YouVersion Bible App, you can read, watch, listen, and share on your smartphone or tablet, and online at Bible.com."
+            description: "នាំយក​នូវសម្ផស្ស និង សេចក្ដី​ពិត​នៃព្រះ​គម្ពីរ​មក​ដាក់​ក្នុង​ជីវិត​ប្រចាំថ្ងៃ។   ជាមួយ​នឹងកម្ម​វិធី​ព្រះ​គម្ពីរ  YouVersion លោក​អ្នក​អាចអាន មើល ស្ដាប់ នឹង​ចែក​ចាយ​តាមរយៈ  smartphone ឬ table និង តភ្ជាប់​នៅ​ក្នុងBible.com។ "
         connections: 
             index: 
                 title: "បាន​ភ្ជាប់​ទៅ​គណនី"
@@ -204,7 +206,7 @@ km:
     find friends: "រក​មិត្ត"
     search placeholder: "ស្វែង​រក..."
     search: "ស្វែង​រក"
-    more: "More"
+    more: "បន្ថែម"
     book: "សៀវភៅ"
     filter book: "ព្រះ​គម្ពីរ​ដែល​អ្នក​ស្វែងរក"
     save: "រក្សា​ទុក"
@@ -218,7 +220,7 @@ km:
     chapter: "ជំពូក"
     bible: "ព្រះគម្ពីរ"
     notes title: "កំណត់​ត្រា"
-    friends: "Friends"
+    friends: "មិត្ត​ភ័ក្ត្រ"
     groups: "ក្រុម"
     mobile: "Mobile Apps"
     live: "ផ្ទាល់/ក្រុម"
@@ -238,26 +240,26 @@ km:
         lower: "ឬ"
         upper: "រឺ"
     moments: 
-        scripture unavailable: "Scripture unavailable."
-        could not load: "Could not load"
-        could not load verse: "Could not load verse"
+        scripture unavailable: "មិន​មាន​ខគម្ពីរ"
+        could not load: "មិន​អាច​ទាញ​យក​បាន"
+        could not load verse: "មិន​អាច​ទាញ​យក​ខគម្ពីរ​បាន"
         showing related: "Showing related moments"
         return to: "Return to"
         time past: "%{ago} ago"
         user likes this: "%{last_liker_link} likes this"
-        likes count more: "%{likes_count} more"
-        likes count 2 more: "%{likes_count} more"
-        likes count 3 or more: "%{likes_count} more"
+        likes count more: "%{likes_count} ទៀត"
+        likes count 2 more: "%{likes_count} ទៀត"
+        likes count 3 or more: "%{likes_count} ទៀត"
         users like this: "%{last_liker_link} and %{more_link} like this"
         vod: 
             title: "ខគម្ពីរ​ប្រចាំ​ថ្ងៃ"
-            get daily email: "Get daily email"
-            subscribe: "Subscribe"
+            get daily email: "យក​អ៊ី​ម៉េល​ប្រចាំថ្ងៃ"
+            subscribe: "ចុះ​ឈ្មោះ"
             update: "អាប់ឌែត"
-            unsubscribe: "Unsubscribe"
+            unsubscribe: "លុប​ឈ្មោះ​ចេញ"
             version: "ជំនាន់"
-            view more: "View More"
-            time: "Time"
+            view more: "បង្ហាញ​បន្ថែម"
+            time: "ពេល​វេលា"
         friendship: 
             now friends: "ឥឡូវ​អ្នក​ជា​មិត្ត​ជាមួយ​នឹង"
         cta: 
@@ -283,7 +285,7 @@ km:
             edit highlight title: "កែរ​គំនូស​ពណ៌​នេះ"
             edit bookmark title: "កែរ​កំណត់​ចំណាំ"
             edit note title: "កែរ​កំណត់​ត្រា"
-            edit subscription: "Edit subscription"
+            edit subscription: "កែ​សម្រួល​ការ​ចុះ​ឈ្មោះ"
             delete: "លុប"
             delete confirm: "តើ​អ្នក​ប្រាកដ​ទេ?"
             delete highlight title: "លុប​គំនូស​ពណ៌​នេះ"
@@ -291,9 +293,9 @@ km:
             delete note title: "លុប​កំណត់​ត្រា​នេះ"
             more: "More"
             cancel: "បោះ​បង់"
-            read in bible: "Read in Bible"
+            read in bible: "អាន​នៅ​ក្នុង​ព្រះ​គម្ពីរ"
             read plan: "អាន"
-            about plan: "About plan"
+            about plan: "អំពី​គំរោង​ផែនការ"
             start plan: "Start plan"
     notifications: 
         title: "ការ​តឿន​រំលឹក"
@@ -326,12 +328,12 @@ km:
     friendships: 
         name required: "ដើម្បី​ទទួល​យក​បទ​ពិសោធន៍​ដ៏​ល្អ​ក្នុង​ព្រះ​គម្ពីរ​ជាមួយ​មិត្ត​ភក្តិ សូម​អាប់​ឌែត​នូវ​ទម្រង់​របស់​អ្នក​ជាមួយ​នាម​ និង​កោត្ត​នាម"
         find friends title: "រក​មិត្ត​ភក្តិ"
-        search by name: "Search by name"
-        search button: "Go"
+        search by name: "ស្វែង​រក​តាម​រយៈឈ្មោះ"
+        search button: "ទៅ"
         widget: 
             find friends title: "រក​មិត្ត​ភក្តិ"
-            search by name: "Search by name"
-            search button: "Go"
+            search by name: "ស្វែង​រក​តាម​រយៈឈ្មោះ"
+            search button: "ទៅ"
         offer success: "សំណើរ​ជា​មិត្ត​បាន​ផ្ញើរ"
         offer failure: "បញ្ហា​ ក្នុង​ការ​ផ្ញើរ​សំណើរ​ជា​មិត្ត"
         create success: "ជោគ​ជ័យ! អ្នក​ជា​មិត្ត​ភក្តិ​នឹង​គ្នា​ហើយ"
@@ -527,11 +529,11 @@ km:
             device id title: "Unique Device ID"
             device id text: "ពេល​ដែល​អ្នក​ចូល​មក​កាន់ កម្មវិធី​ព្រះ​គម្ពីរ YouVersion យើង​នឹង​ប្រមូល​នូវ Unique Device ID ('UDID') ឬ​ក៏ អាស័យ​ដ្ឋាន IP របស់​អ្នក។ យើង​នឹង​ប្រើ UDID ដើម្បី​នឹង​ផ្ដល់​នូវ​បទ​ពិសោធន៍នៃ​ការ​ប្រើ​ប្រាស់​ដ៏ល្អ​ដល់​អ្នក។ ព័ត៌មាន UDID ត្រូវ​ប្រមូល​ដើម្បី​បញ្ជាក់​ពី​ចំនួន​ពិត​ប្រាដក​ដែល​ឧបករណ៍​ចល័ត​មួយ​ៗ​ត្រូវ​បាន​ប្រើ​នូវ​សេវា​កម្ម​របស់​យើង ឬ​ផ្នែក​នៃ សេវា​កម្ម​របស់​យើង ក្នុង​ការ​កត់​ត្រា​នូវ​ចំនួន​សរុប​នៃ​អ្នក​ប្រើ​ប្រាស់, វិភាគ​ទិន្នន័យ នឹង​ធ្វើ​ការទំនាក់​ទំនង​អោយ​កាន់​តែ​ប្រសើរឡើង។ យើង​ប្រហែល​នឹង​ផ្ដុំ​គ្នា​នូវ UDID ជាមួយ​នឹង​ត្រី​ភាគី ក្នុង​ការ​ផ្ដល់​ដល់​អ្នក​ជាមួយ​នឹង​បទ​ពិសោធន៍​ប្រើ​ប្រាស់ ហើយ​ក្នុង​ការ​លើក​កំពស់​នូវ​គុណ​ភាព​នៃ​សេវា​កម្ម​របស់​យើង។ យើង​នឹង​មិន​ចែក​ចាយ​នូវ​ព័ត៌មាន​ផ្ទាល់​ខ្លួន​របស់​អ្នក​ជាមួយ​នឹង​ភាគី​ទី​បី ដែល​ពាក់ពន្ធ័​ជាមួយ​នឹង UDID របស់​អ្នក​ឡើយ។"
             cookies title: "LifeChurch.tv cookies"
-            cookies text: "When you visit <a href='https://www.bible.com'>www.bible.com</a>, we may send one or more cookies to your computer, so that we may uniquely identify your browser. (A cookie is simply a tiny text file containing a string of characters.) Accepting our cookies allows you to keep your user preferences from session to session. Although most browsers accept cookies by default, you can set your browser to refuse all cookies, or to tell you when you're being sent a cookie. Some YouVersion features and services may not function properly if you have cookies disabled."
+            cookies text: "នៅ​ពេលដែល​លោក​អ្នក​ចូល​មក​កាន់ www.bible.com <a href='https://www.bible.com'></a>យើង​អាចបញ្ជូន cookie មកកាន់​ម៉ាស៊ីន​កុំព្យូទ័រ​របស់​លោក​អ្នក ដើម្បី​អោយ​យើង​អាច​ចំណាំកម្ម​វីធី​ browser របស់​លោក​អ្នក។(Cookie គឺ​ជាកូន​ឯកសារកូដ​តូចមួយ​ដែល​មាន​ផ្ទុក​នូវ​តួអក្សរ​មួយ​ចំនួន​តូច។)សូម​លោក​អ្នក​យល់​ព្រម​ទទួល​យក cookie ដើម្បី​រក្សា​ទុក​នូវ​ការ​កំណត់​ដែល​លោក​អ្នក​ចូល​ចិត្ត​នៅ​ពេល​ដែល​លោក​អ្នក​ភ្ជាប់​ចូល​ម្ដងៗ។​ទោះបី​ជាកម្មវីធី browser ភាគ​ច្រើន​ទទួល​យក​ cookie ដោយ​ស្វ័យ​ប្រវត្តិ លោក​អ្នក​នៅ​តែ​អាច​កំណត់​អោយ​កម្មវិធី browser របស់​លោក​អ្នក​បដិសេធ cookie ទាំង​អស់​ ឬ ជូនដំណឹង​ប្រាប់​លោក​អ្នក​នៅ​ពេល​ដែល​មាន​ cookie ត្រូវ​បាន​បញ្ជូន​មក។មាន​មុខងារ និង សេវាកម្ម​ខ្លះ​របស់ YouVersion ដែល​នឹង​មិន​ដំណើរ​ការនៅ​ពេល​ដែល​ cookie ត្រូវ​បាន​បដិសេធ។"
             log title: "ព័ត៌មានកំណត់ហេតុ"
             log text: "ពេល​ដែល​អ្នក​ប្រើ​ប្រាស់សេវាកម្ម​របស់​ LifeChurch.tv នោះ​ម៉ាស៊ីន​មេ​របស់​យើង​នឹង​កត់ត្រានូវ​ព័ត៌មាន​របស់​អ្នក​ដោយ​ស្វ័យ​ប្រវត្តិថា កម្មវិធី​រុករក​របស់​អ្នក​នឹង​ផ្ញើរ​មក​កាន់​វែប​សាយ​របស់​យើង។ កំណត់​ត្រា​ម៉ាស៊ីន​មេ​នឹង​បញ្ជូល​នូវ​សំណើរ​ដែល​មាន​នៅ​លើ​វែប​សាយ, អាស័យដ្ឋាន​ពិធីការ​អ៊ីនធើណែត, ប្រភេទ​កម្ម​វិធី​រុករក, ភាសា, កាល​បរិច្ចេទ និង​ពេល​វេលា ហើយ​ខូគី​មួយ ឬ​ច្រើន​នឹង​បញ្ជាក់​ពី​កម្ម​វិធី រុក​រក​របស់​អ្នក។"
             communications title: "ទំនាក់​ទំនង​អ្នក​ប្រើ​ប្រាស់"
-            communications text: "Personal information or requests that you submit via <a href='https://www.bible.com/live'>www.bible.com/live</a> will be sent to the group administrator. The group administrator and/or one of their members will have access to this information. When you send email or other communication to any LifeChurch.tv owned website, we may retain those communications to process your inquiries, respond to your requests and improve our services."
+            communications text: "ពត៌មាន​​ ឬ ការ​ស្នើ​សុំ ជាឯកជន​ដែល​លោក​អ្នក​បញ្ជូនមក​តាម​រយៈ www.bible.com/live​<a href='https://www.bible.com/live'></a>នឹង​ត្រូវ​ផ្ញើរ​ទៅកាន់​ក្រុម​រដ្ឋបាល។ក្រុម​រដ្ឋបាល និង/ឬ សមាជិក​ណា​ម្នាក់​នៅ​ក្នុង​ក្រុម​នេះ មាន​សិទ្ធិ​ទទួល​បាន​ពត៌មាននេះ។នៅ​ពេល​ដែល​លោក​អ្នក​បញ្ជូន​អ៊ីម៉េល ឬ សារទំនាក់​ទំនង​ផ្សេង​ៗទៀតដោយ​ផ្ទាល់​ទៅ​កាន់​ ទំព័រ LifeChurch.tvយើង​អាច​រក្សា​ទុក​សារ​ទំនាក់ទំនង​ទាំង​នេះ​ដើម្បី​ដោះ​ស្រាយ​នូវ​សំនួរទាំងឡាយ ឆ្លើយ​តប​ទៅ​នឹង​ការ​ស្នើសុំទាំងឡាយ​របស់​លោក​អ្នក​ ព្រម​ទាំង​ធ្វើ​ការ​កែ​លម្អរ​សេវាកម្ម​របស់​យើង។​"
             third party title: "បណ្ដាញ​ជន​ទី​បី"
             third party text: "ច្បាប់​ជាឯក​ជន​នេះ​គឺ​អនុវត្ត​សំរាប់​តែ​បណ្ដាញ និងកម្មវិធី​ដែល​ម្ចាស់​កម្ម​សិទ្ធិ និង​ប្រតិបត្តិ​ការណ៍​ដោយ LifeChurch.tv។ LifeChurch.tv មិន​អាច​ទាញ​យក​តំណរ​ភ្ជាប់​បណ្ដាញ​ពី​វែប​សាយ​ផ្សេងៗ​មក​ធ្វើ​ជា​សេវា​កម្ម​ឡើយ។ ដោយ​សារ​តែវែប​សាយ​ផ្សេង​ៗ​ទៀត​គេ​នឹងដាក់​ខូគី​ ឬ​ឯកសារ​ផ្សេង​ទៀត​មក​លើ​កុំ​ព្យូទ័រ​របស់​អ្នក, ប្រមូល​ទិន្នន័យ ឬទាញ​យក​ព័ត៌មាន​ផ្ទាល់​ខ្លួន​របស់​អ្នក។ លោក​អ្នក​គួរ​តែ​យល់​ដឹង​អោយ​បាន​ច្បាស់​នូវ​ច្បាប់​ជាឯក​ជន ឬ​ក៏​អ្នក​ត្រូវ​ទៅ​លេង​បណ្ដាញ​ផ្សេង​ទៀត?"
             information use title: "តើ​យើង​ប្រើ​ប្រាស់​នូវ​ព័ត៌មាន​របស់​អ្នក​ដោយ​របៀប​ណា?"
@@ -545,7 +547,7 @@ km:
             enforcement title: "ការ​ជំរុញ"
             enforcement text: "do not translate"
             questions title: "សំនួរ"
-            questions text: "Any questions about the privacy policy can be directed to: <a href='mailto:legal@youversion.com'>legal@youversion.com</a>"
+            questions text: "សំនួរ​ទាំង​ឡាយ​ទាក់​ទង​ទៅ​នឹង​គោល​នយោបាយ​ឯកជន <a href='mailto:legal@youversion.com'>អាច​ត្រូវ​បញ្ជូន​ទៅ​កាន់ legal@youversion.com</a>"
         terms: 
             title: "ច្បាប់​នៃ​ការ​ប្រើ​ប្រាស់"
             translation disclaimer: "លក្ខខ័ណ្ឌ​​ត្រូវ​បាន​បក​ប្រែ​ដើម្បី​អោយ​មាន​ភាព​ងាយ​ស្រួល តែ​យ៉ាង​ណា​ម៉ិញ LifeChurch.tv នឹង​មិន​ធានា​ ឬ​តំណាង​អោយ​ ការ​បក​ប្រែ​ដោយ​មាន​ភាព​ជាក់​លាក់​ និង​ច្បាស់​លាស់​នោះ​ទេ។\n\nប្រសិន​បើ​មាន​ករណី​មិន​ច្បាស់​ជាមួយ​ការ​បក​ប្រែ​ និង​ភាសា​អង់​គ្លេស នោះ​យើង​នឹង​យក​ភាសា​អង់គេ្លស​ជា​ផ្លូវការ។"
@@ -643,6 +645,7 @@ km:
             badges: "ប្រាប់​ខ្ញុំ​អោយ​ដឹងអំពីផ្លាក​សញ្ញា​ដែល​ខ្ញុំ​ទទួល​បាន"
             follower: "ប្រាប់​ខ្ញុំ​អោយដឹង​ពេល​មាន​អ្នក​​តាម​ខ្ញុំ"
             newsletter: "សូម​ប្រាប់​ខ្ញុំ​អោយ​ដឹង​ពេល​មាន​ដំណឹង​ថ្មីៗ​ពី YouVersion"
+            contact_joins: "សូម​ផ្ដល់​ដំណឹង​ដល់​ខ្ញុំ​នៅ​ពេល​ដែល​អ្នក​មាន​ទំនាក់​ទំនង​ជាមួយ​ខ្ញុំ​ណា​ម្នាក់​ចូល​រួម"
             note_like: "ប្រាប់​ខ្ញុំ​អោយ​ដឹង​ពេល​មាន​អ្នក​ចូល​ចិត្ត​កំណត់​ត្រា​របស់​ខ្ញុំ"
             reading_plans: "ប្រាប់​ខ្ញុំ​អោយ​ដឹង​ពី​ព័ត៌មាន​សំរាប់​គំរោង​អាន​ដែល​ខ្ញុំ​បាន​ចាប់​ផ្ដើម។"
             publishing partners: "ជួយ​ប្រាប់​តំណឹង​ដល់​ខ្ញុំ​ពេល​មាន​ការ​អាប់ឌែតពី មាតិការ​ដៃ​គូរ​របស់ YouVersion"
@@ -702,7 +705,7 @@ km:
             my plans: "គំរោង​របស់​ខ្ញុំ"
             start reading: "ចាប់ផ្ដើមអាន"
             view my plans: "View My Plans"
-            featured plans: "Featured Plans"
+            featured plans: "គំរោង​ផែនការ​ចំបងៗ"
             view all plans: "View All Plans"
             reading: "reading"
             readings: "readings"
@@ -911,6 +914,7 @@ km:
         creation form errors: "មាន​កំហុស(ច្រើន)​កើត​មាន​ឡើង​រារាំង​មិន​អោយ​អ្នក​ធ្វើ​ការ​បរិច្ចាក"
     download ad: 
         title: "ដោន​ឡូដ​យក​ Bible App ដោយ​ឥត​គិតថ្លៃ"
+        description copy: "មាន​ជំនាន់​រាប់​រយ​ត្រូវ​បាន​បក​ប្រែ​ជា %{language_count} ភាសារ​ផ្សេងៗ​គ្នា - ជា​ព្រះ​គម្ពីរ​ដែល​ទៅ​ជា​មួយ​លោក​អ្នក​គ្រប់​ទី​កន្លែង​ទាំងអស់។"
         line 1: "ជំនាន់​គម្ពីរ​រាប់​រយ​ក្នុង​ចំណោម 100+"
         line 2: "ច្រើន​ភាសា- ជា​ព្រះ​គម្ពីរ​"
         line 3: "ដែល​ទៅ​ជាមួយ​អ្នក​គ្រប់​ទី​កន្លែង"
@@ -958,7 +962,7 @@ km:
     mobile page: 
         h2: "ព្រះបន្ទូល​របស់​ព្រះជាម្ចាស់​គឺ​នៅ​ជាមួយ​អ្នក"
         h3: "YouVersion គឺជា​សកល"
-        h3 sub: "មាន​ជា​ច្រើន​100ភាសា​ក្នុង​សកល​លោក"
+        h3 sub: "មាន​ច្រើន​ជាង​%{language_count} ភាសារ​ជុំវិញ​ពិភពលោក។"
         main: "មនុស្ស​ដប់​លាន​អ្នក​កំពុង​ប្រើ​ប្ាស់ Bible App™ ដើម្បី​ធ្វើ​អោយ​ព្រះបន្ទូល​របស់​ព្រះជាម្ចាស់​ជា​ផ្នែក​មួយ​នៅ​ក្នុង​ជីវិតរស់​នៅ​របស់​គេ។ ដោន​ឡូដ​កម្មវិធី​ដោយ​ឥត​គិត​ថ្លៃ​ហើយ​ចូល​ទៅ​កាន់​កំណត់​ចំណាំ, កំណត់​ត្រា, និង​គំរោង​អានគម្ពីរ​ពី​គ្រប់​ទៅ​កន្លែង។ សប្បាយ​ជាមួយ​នឹង​ជំនាន់​គម្ពីរ​រាប់​រយ រូម​បញ្ចូល​ទាំង​សំលេង​នៅ​លើ​ទូរសព្ទ័​ចល័ត​របស់​អ្នក"
         button h4: "ចូលទៅកាន់ Bible.com/app"
         button h4 sub: "​លើ​ទូរសព្ទ័​ចល័ត​របស់​អ្នក"
@@ -979,6 +983,7 @@ km:
         symbian: "Symbian"
         mobile web: "Mobile Web"
         amazon: "Kindle Fire"
+        free overlay: "ពិត​ជាឥត​គិត​ថ្លៃ ១០០%"
     pages: 
         generic_error: 
             title: "Oops!"
@@ -1032,7 +1037,7 @@ km:
         404 explanation: "លោក​អ្នក​ប្រហែល​ជា​ចាប់​ផ្ដើម​ម្ដង​ទៀត​ពី  <a href='%{reader_path}'>ទំព័រ​ដើម</a>. នៅ​តែ​មាន​បញ្ហា? សូម​ទាក់​ទង​មក​យើង <a href='%{support_url}'>ក្រុម​ជំនួយ</a>."
         404 message: "យើង​សូម​ទោស, ទំព័រ​ដែល​អ្នក​កំពុង​រក​មិន​មាន​ទេ។"
         408 message: "សូម​ទោស​ ម៉ាស៊ីន​មេ​របស់​យើង​មិន​ឆ្លើយតប​ក្នុង​កំឡុង​ពេល​បង្ហាញ​នេះ​។"
-        408 explanation: "We've been alerted and will address any persistent issues as quickly as possible. Let's see if we can get you back to your Bible reading!"
+        408 explanation: "យើង​បាន​ទទួល​នូវ​ការ​ជូន​ដំណឹង​រួច​ហើយ យើង​នឹង​ធ្វើ​ការ​ដោះ​ស្រាយ​នូវ​រាល់​បញ្ហា​ទាំង​ឡាយ​អោយ​បាន​ឆាប់​រហ័ស​បំផុត​តាម​តែ​អាច​ធ្វើ​បាន។យើង​​នាំ​លោក​អ្នក​ត្រឡប់​ទៅ​កាន់​គំរោង​ផែន​ការ​ណ៍​អាន​ព្រះ​គម្ពីរវិញ!"
         try again: "សូម​ព្យាយាម​ម្ដង​ទៀត"
     versions: 
         filter: "ខ​គម្ពីរ​ដែល​អ្នក​ស្វែង​រក"
@@ -1080,7 +1085,7 @@ km:
                 tagline: "តោះ យើង​បង្កើត​ប្រវត្តិសាស្ត្រ​ជាមួយ​គ្នា។"
                 button: "ចែកចាយ​កម្មវិធី​ព្រះ​គម្ពីរ"
     ui: 
-        characters remaining: "characters remaining"
+        characters remaining: "តួ​អក្សរ​នៅ​សល់"
         yes button: "បាទ/ចា៎"
         no button: "ទេ"
         cancel: "បោះ​បង់"
