--- a/config/locales/no.yml
+++ b/config/locales/no.yml
@@ -3,6 +3,8 @@
     time: 
         formats: 
             votd: "%-d. %B, %Y"
+    counter: 
+        format: "999,999,999"
     social: 
         intro page: 
             main heading: "Samtale og utforske"
@@ -210,8 +212,8 @@
     save: "Lagre"
     cancel: "Avbryt"
     try the beta: "Prøv beta"
-    welcome to the beta: "Welcome to Bible.com!"
-    highlight: "Highlight Verse"
+    welcome to the beta: "Velkommen til Bible.com!"
+    highlight: "Marker vers"
     comment: "Ny kommentar"
     note: "Nytt notat"
     selected: "Markert"
@@ -220,7 +222,7 @@
     notes title: "Notater"
     friends: "Venner"
     groups: "Grupper"
-    mobile: "Mobile Apps"
+    mobile: "Mobilapper"
     live: "Live/Grupper"
     first page: "Første side"
     last page: "Siste side"
@@ -251,12 +253,12 @@
         users like this: "%{last_liker_link} og %{more_link} liker dette"
         vod: 
             title: "Dagens vers"
-            get daily email: "Get daily email"
+            get daily email: "Få daglig e-post"
             subscribe: "Abonner"
             update: "Oppdater"
-            unsubscribe: "Unsubscribe"
+            unsubscribe: "Avslutt abonnement"
             version: "Bibelutgave"
-            view more: "View More"
+            view more: "Se mer"
             time: "Tid"
         friendship: 
             now friends: "Du er nå venn med"
@@ -283,7 +285,7 @@
             edit highlight title: "Rediger denne markeringen"
             edit bookmark title: "Rediger dette bokmerket"
             edit note title: "Rediger dette notatet"
-            edit subscription: "Edit subscription"
+            edit subscription: "Endre abonnement"
             delete: "Slett"
             delete confirm: "Er du sikker?"
             delete highlight title: "Slett denne markeringen"
@@ -355,8 +357,8 @@
             add friend button title: "Send %{user} en venneforespørsel"
             accept button: "Godta"
             accept request button: "Godta forespørsel"
-            ignore button: "Decline"
-            ignore request button: "Decline request"
+            ignore button: "Avslå"
+            ignore request button: "Avvis forespørsel"
     notes: 
         none user: "%{username} har ikke laget noen notater ennå"
         blank slate: 
@@ -394,7 +396,7 @@
         all notes: "Alle notater"
         community notes: "Felles notater"
         new note: "Nytt notat"
-        status field: "Note Status:"
+        status field: "Notatstatus:"
         edit: "Rediger"
         delete: "Slett dette notatet"
         confirm delete: "Ja, jeg er sikker"
@@ -407,7 +409,7 @@
         create failure: "Det oppstod en feil under lagring av notat"
         destroy success: "Notat slettet"
         destroy failure: "Det oppstod en feil ved sletting av notat"
-        update success: "Note updated"
+        update success: "Notat oppdatert"
     ref: 
         loading secondary: "Laster referanser i sekundær oversettelse..."
         clear verses: "Nullstill valgte vers"
@@ -469,21 +471,21 @@
         edit notifications: "Varslingsinnstillinger"
         edit connections: "Tilknyttede kontoer"
         edit devices: "Tilknyttede enheter"
-        vod_subscriptions: "Verse of the Day Subscriptions"
-        vod_subscription success: "You have successfully updated your Verse of the Day subscription!"
-        vod_subscription failure: "Sorry, there was a problem updating your Verse of the Day subscription."
-        daily email delivery: "Daily email delivery"
+        vod_subscriptions: "Abonner på dagens bibelvers"
+        vod_subscription success: "Du har nå endret ditt abonnement på dagens bibelvers!"
+        vod_subscription failure: "Beklager, det oppstod et problem med endringen av abonnement på dagens bibelvers."
+        daily email delivery: "Daglig mottak av e-post"
         time: "Tid"
-        daily push notifications: "Daily push notifications for mobile apps"
+        daily push notifications: "Daglige varslingsmeldinger for mobilapp"
         subscribe: "Abonner"
-        unsubscribe: "Unsubscribe"
+        unsubscribe: "Avslutt abonnement"
         edit account_existence: "Slett brukerkonto"
         delete account button: "Slett min YouVersion-konto"
         no devices: "Ingen enheter er knyttet til din YouVersion konto"
         no devices download copy: "Basert på Bibelen Online, YouVersion, er Bibel-appen en gratis mobil Bibel som kan installeres på nær sagt alle mobile enheter. Bibel-appen gir brukerne mulighet til å lese Bibelen, dele vers i sine nettverk, lage bokmerker av sine favoritt-avsnitt, og mer—alt i et format som tilpasser seg deres stadig økende mobile hverdag. Besøk &lt;a href:'https://www.bible.com/app'&gt;bible.com/app</a> fra din mobile enhet for å laste ned Bibel-appen og få kontakt med din konto!"
         yes delete: "Ja, slett min brukerkonto"
         account delete success: "Din YouVersion-konto har blitt slettet. Vi håper du fortsatt vil finne meningsfulle måter å benytte Bibelen på. Noen av disse appene kan være nyttige for deg videre: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-        delete account description: "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within Bible.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
+        delete account description: "Hvis du sletter kontoen din vil du permanent slette all informasjon, historikk og tilpasninger som notater, bokmerker, uthevinger hos Bible.com og i bibelappen. Denne handlingen kan ikke reverseres av vårt team. Hvis du er sikker på at du vil gå videre, fortsett under."
         user recent activity: "%{user}s nylige aktivitet"
         my notes: "Notater"
         user notes: "%{user}s notater"
@@ -634,7 +636,7 @@
             notification errors: "Følgende feil forhindret oppdatering av varslinger:"
             edit: "Rediger"
             bio: "Om meg"
-            complete_first_last: "Complete your profile by filling in your first and last name"
+            complete_first_last: "Fullfør profilen din ved å fylle ut for- og etternavn"
         password: 
             updated: "Passordet ditt er endret."
             error: "En feil oppstod da du prøvde å endre passord."
@@ -643,6 +645,7 @@
             badges: "Varsle meg om merker jeg har opptjent."
             follower: "Varsle meg når noen følger meg."
             newsletter: "Hold meg oppdatert på meldinger fra YouVersion."
+            contact_joins: "Notify me when a Contact joins"
             note_like: "Varsle meg når noen liker mine notater."
             reading_plans: "Varsle meg om informasjon for leseplaner jeg følger."
             publishing partners: "Hold meg oppdatert om nyheter fra YouVersions partnere."
@@ -911,6 +914,7 @@
         creation form errors: "Følgende feil gjorde at gave ikke kunne gis:"
     download ad: 
         title: "Last ned gratis Bibel-app."
+        description copy: "Hundreds of versions in %{language_count}+ different languages - the Bible that goes with you anywhere."
         line 1: "Hundrevis av oversettelser på over"
         line 2: "100 forskjellige språk—Bibelen som"
         line 3: "er med deg over alt."
@@ -938,7 +942,7 @@
         facebook: "YouVersion på Facebook"
         twitter: "YouVersion på Twitter"
         support: "Trenger du hjelp med YouVersion?"
-        lead copy: "Based on the online Bible, Bible.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more—all in a format that keeps up with their increasingly mobile lifestyle."
+        lead copy: "Bibelappen er en gratis mobil Bibel basert på onlinebibelen bible.com, og kan installeres på nesten alle mobiler. Bibelappen lar deg lese Bibelen, dele vers i ditt sosiale nettverk, lage bokmerker for favorittvers og mer. Alt i et format tilpasset vår stadig mer mobile livsstil."
         resources title: "Ressurser for presse"
         now title: "I dag i YouVersion-samfunnet"
         resources: 
@@ -958,7 +962,7 @@
     mobile page: 
         h2: "Guds ord er med deg."
         h3: "YouVersion er verdensomspennende"
-        h3 sub: "Tilgjengelig på over 100 språk verden rundt"
+        h3 sub: "Available in more than %{language_count} languages worldwide."
         main: "Et titalls millioner mennesker bruker 'the Bible App™' for å gjøre Guds ord til en del av sine daglige liv. Last ned denne gratis appen og få tilgang til dine bokmerker, notater og leseplaner overalt. Du tilbys hundrevis av ulike bibelutgaver, inkludert lydbibler - alt på din mobiltelefon eller ipad."
         button h4: "Gå til Bible.com/app"
         button h4 sub: "På din mobile enhet"
@@ -979,6 +983,7 @@
         symbian: "Symbian"
         mobile web: "Mobilt nett"
         amazon: "Kindle Fire"
+        free overlay: "100% Free"
     pages: 
         generic_error: 
             title: "Ojsann!"
@@ -1000,7 +1005,7 @@
                 subscribe heading: "Abonner på en leseplan."
                 subscribe description: "Les hele Bibelen, fokuser på et tema eller følg en andaktsserie skrevet av en dyktig lærer. Velg din plan og du vil hver dag finne en bibeltekst som venter på deg."
                 download heading: "Ta Bibelen med deg."
-                download description: "<a href='https://bible.com/download'>Download</a> the Bible App for free on any mobile device. When you use the mobile app, your notes, bookmarks, highlights, plans, and more will be automatically synced across all of your devices."
+                download description: "<a href='https://bible.com/download'>Last ned</a> Bibel-appen gratis til alle mobile enheter. Når du bruker appen, vil notater, bokmerker, markeringer, planer og mer bli synkronisert automatisk mellom alle dine enheter."
             get started: "Kom i gang med din gratis brukerkonto."
             word with you: "Guds ord er med deg."
             download action: "Last ned Bibel-appen"
@@ -1028,7 +1033,7 @@
             cross references: "Kryssreferanser"
     app errors: 
         404 plans explanation: "Leter du etter denne planen: <a href='%{plan_path}'>%{title}</a> ?"
-        404 contact support: "Having trouble? Contact our <a href='%{support_url}'>support team</a>."
+        404 contact support: "Problemer? Kontakt vårt<a href='{support_url}'>&lt;a href='{support_url}'&gt;&lt;/a&gt;</a>support team."
         404 explanation: "Du kan kanskje prøve å starte igjen fra  <a href='%{reader_path}'>hjemmesiden</a>. Om du fremdeles har problemer, kontakt vårt  <a href='%{support_url}'>support team</a>."
         404 message: "Beklager, siden du ser etter finnes ikke."
         408 message: "Beklager,men våre servere har desverre ikke gitt respons innen rimelig tid."
