--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -3,6 +3,8 @@ pl:
     time: 
         formats: 
             votd: "%-d %B, %Y"
+    counter: 
+        format: "999,999,999"
     social: 
         intro page: 
             main heading: "Rozmowa i Odkrycia"
@@ -84,7 +86,7 @@ pl:
             description: "Czytaj Słowo Boże w dowolnym czasie, w dowolnym miejscu używając Aplikacji Biblii YouVersion. Dziel się Pismem Świętym ze znajomymi, zakreślaj fragmenty, dodawaj zakładki i czytaj codziennie z planami Biblii. Dostępne dla iOS, Androida, Blackberry, Windows Phone i inne systemy."
         site: 
             title: "Bible.com"
-            description: "Bring the beauty and truth of the Bible into everyday life. With the YouVersion Bible App, you can read, watch, listen, and share on your smartphone or tablet, and online at Bible.com."
+            description: "Sprowadź piękno i prawdę Biblii do twojego codziennego życia. Z aplikacją Biblia, wydaną przez YouVersion, możesz czytać, oglądać, słuchać i dzielić się, na twoim urządzeniu lud internecie, na Bible.com"
         connections: 
             index: 
                 title: "Połączone konta"
@@ -210,8 +212,8 @@ pl:
     save: "Zapisz"
     cancel: "Anuluj"
     try the beta: "Wypróbuj wersję Beta"
-    welcome to the beta: "Welcome to Bible.com!"
-    highlight: "Highlight Verse"
+    welcome to the beta: "Witamy w Bible.com!"
+    highlight: "Podświetl werset"
     comment: "Nowy komentarz"
     note: "Nowa notatka"
     selected: "wybrane"
@@ -220,7 +222,7 @@ pl:
     notes title: "Notatki"
     friends: "Przyjaciele"
     groups: "Grupy"
-    mobile: "Mobile Apps"
+    mobile: "Mobilne aplikacje"
     live: "Na żywo/Grupy"
     first page: "Pierwsza strona"
     last page: "Ostatnia strona"
@@ -251,12 +253,12 @@ pl:
         users like this: "%{last_liker_link} i %{more_link} lubi to"
         vod: 
             title: "Werset dnia"
-            get daily email: "Get daily email"
+            get daily email: "Codzienny e-mail"
             subscribe: "Zasubskrybuj"
             update: "Uaktualnij"
-            unsubscribe: "Unsubscribe"
+            unsubscribe: "Anuluj subskrypcję"
             version: "Przekład"
-            view more: "View More"
+            view more: "Zobacz więcej"
             time: "Czas"
         friendship: 
             now friends: "Jesteś teraz znajomym"
@@ -283,7 +285,7 @@ pl:
             edit highlight title: "Edytuj to zakreślenie"
             edit bookmark title: "Edytuj tę zakładkę"
             edit note title: "Edytuj tę notatkę"
-            edit subscription: "Edit subscription"
+            edit subscription: "Edytuj subskrypcję"
             delete: "Usuń"
             delete confirm: "Czy jesteś pewien?"
             delete highlight title: "Usuń to zakreślenie"
@@ -355,8 +357,8 @@ pl:
             add friend button title: "Wyślij %{user} zaproszenie do znajomych"
             accept button: "Zaakceptuj"
             accept request button: "Zaakceptuj zaproszenie"
-            ignore button: "Decline"
-            ignore request button: "Decline request"
+            ignore button: "Odmów"
+            ignore request button: "Odrzuć prośbę"
     notes: 
         none user: "%{username} nie ma jeszcze żadnych notatek."
         blank slate: 
@@ -394,7 +396,7 @@ pl:
         all notes: "Wszystkie notatki"
         community notes: "Notatki społeczności"
         new note: "Nowa notatka"
-        status field: "Note Status:"
+        status field: "Status notatki:"
         edit: "Edytuj"
         delete: "Usuń tę notatkę"
         confirm delete: "Tak, na pewno"
@@ -407,7 +409,7 @@ pl:
         create failure: "Błąd, nie zapisano notatki"
         destroy success: "Notatka usunięta."
         destroy failure: "Błąd, nie usunięto notatki"
-        update success: "Note updated"
+        update success: "Notatka uaktualniona"
     ref: 
         loading secondary: "Ładowanie odniesienia w drugim przekładzie..."
         clear verses: "Wyczyść zaznaczenie wersetów"
@@ -469,21 +471,21 @@ pl:
         edit notifications: "Zarządzaj powiadomieniami"
         edit connections: "Połączone konta"
         edit devices: "Połączone urządzenia"
-        vod_subscriptions: "Verse of the Day Subscriptions"
-        vod_subscription success: "You have successfully updated your Verse of the Day subscription!"
-        vod_subscription failure: "Sorry, there was a problem updating your Verse of the Day subscription."
-        daily email delivery: "Daily email delivery"
+        vod_subscriptions: "Subskrypcja Werset dnia "
+        vod_subscription success: "Udało ci się uaktualnić subskrypcję Werset dnia!"
+        vod_subscription failure: "Przepraszamy, wystąpił błąd podczas aktualizowania subskrypcji Werset dnia."
+        daily email delivery: "Codzienna wysyłka mailowa"
         time: "Czas"
-        daily push notifications: "Daily push notifications for mobile apps"
+        daily push notifications: "Codzienne powiadomienia push dla urządzeń mobilnych"
         subscribe: "Zasubskrybuj"
-        unsubscribe: "Unsubscribe"
+        unsubscribe: "Anuluj subskrypcję"
         edit account_existence: "Usuń konto"
         delete account button: "Usuń moje Konto YouVersion"
         no devices: "Nie masz urządzeń podłączonych do konta YouVersion"
         no devices download copy: "Aplikacja Biblii jest darmową mobilną Biblią, bazującą na Biblii on-line YouVersion, którą można zainstalować na niemal każdym urządzeniu. Aplikacja Biblii pozwala użytkownikom na czytanie Biblii, dzielenie się wersetami, zaznaczanie ulubionych fragmentów i korzystanie z innych funkcji—wszystko to w formie przyjaznej dla mobilnego trybu życia. Odwiedź <a href='https://www.bible.com/app'>bible.com/app</a> ze swojego urządzenia, aby pobrać Aplikację Biblii i połączyć swoje konto!"
         yes delete: "Tak, usuń moje konto"
         account delete success: "Twoje konto YouVersion zostało usunięte. Mamy nadzieję, że będzie nadal znajdował sposoby, aby studiować Biblię. Niektóre z tych aplikacji mogą być Ci pomocne:  <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
-        delete account description: "If you delete your account, you will permanently eliminate all of your information, history, and personalization (such as notes, bookmarks, highlights, etc.) within Bible.com and the Bible App. This action cannot be reversed by you or by our team. If you're certain you'd like to move forward, proceed below."
+        delete account description: "Jeżeli usuniesz swoje konto, całkowicie wyeliminujesz wszystkie swoje informacje, historię i własne ustawienia (takie jak notatki, zakładki, podświetlenia, itp.) z Biblia.com, jak i w aplikacji Biblia. Skutki tej decyzji będą nie nieodwracalne, ani przez ciebie, ani przez nasz zespół. Jeżeli jesteś pewny, że chcesz to zrobić, poniżej możesz kontynuować."
         user recent activity: "Ostatnia aktywność użytkownika %{user}"
         my notes: "Notatki"
         user notes: "Notatki użytkownika %{user}"
@@ -634,7 +636,7 @@ pl:
             notification errors: "Poniższe błędy uniemożliwiły aktualizację twoich powiadomień:"
             edit: "Edytuj"
             bio: "Biografia"
-            complete_first_last: "Complete your profile by filling in your first and last name"
+            complete_first_last: "Uzupełnij swój profil wpisując swoje imię i nazwisko."
         password: 
             updated: "Sukces! Twoje hasło zostało zmienione."
             error: "Niestety, podczas próby zmiany hasła wystąpił błąd."
@@ -643,6 +645,7 @@ pl:
             badges: "Powiadamiaj mnie o zdobytych odznaczeniach."
             follower: "Powiadom mnie, gdy ktoś za mną podąży."
             newsletter: "Powiadamiaj mnie o ogłoszeniach YouVersion."
+            contact_joins: "Notify me when a Contact joins"
             note_like: "Powiadamiaj mnie, gdy ktoś polubi moje notatki."
             reading_plans: "Powiadamiaj mnie o informacjach dotyczących planów czytania, które rozpocząłem."
             publishing partners: "Informuj mnie o nowościach na stronach partnerów YouVersion."
@@ -911,6 +914,7 @@ pl:
         creation form errors: "Poniższe błędy nie pozwoliły na dotację:"
     download ad: 
         title: "Pobierz bezpłatną Aplikację Biblii"
+        description copy: "Hundreds of versions in %{language_count}+ different languages - the Bible that goes with you anywhere."
         line 1: "Setki przekładów w ponad 100"
         line 2: "językach - Biblia, która"
         line 3: "idzie z tobą wszędzie."
@@ -938,7 +942,7 @@ pl:
         facebook: "YouVersion na Facebooku"
         twitter: "YouVersion na Twitterze"
         support: "Potrzebujesz pomocy z YouVersion?"
-        lead copy: "Based on the online Bible, Bible.com, the Bible App is a free mobile Bible that can be installed on almost any phone. The Bible App allows users to read the Bible, share verses with their social networks, bookmark their favorite passages, and more—all in a format that keeps up with their increasingly mobile lifestyle."
+        lead copy: "Opierając się na serwisach Biblia, Bible.com, aplikacja Biblii jest darmową mobliną Biblią, którą możesz zainstalować nie mal każdym telefonie. Aplikacja Biblii pozwala użytkownikowi na czytanie Biblii, dzielenie się wersetami na portalach społecznościowych, tworzenie zakładek z ulubionymi fragmentami i wiele więcej-wszystko w takiej formie, która umożliwia mobilny styl życia."
         resources title: "Materiały dla prasy"
         now title: "Dzisiaj w społeczności YouVersion"
         resources: 
@@ -958,7 +962,7 @@ pl:
     mobile page: 
         h2: "Słowo Boże jest z tobą."
         h3: "YouVersion jest globalne"
-        h3 sub: "Dostępne w ponad 100 językach świata."
+        h3 sub: "Available in more than %{language_count} languages worldwide."
         main: "Dziesiątki milionów ludzi używają Aplikacji Biblii, aby uczynić Słowo Boże częścią swojego życia. Pobierz darmową aplikację i uzykaj dostęp do zakładek, notatek oraz planów czytania z dowolnego miejsca. Ciesz się setkami przekładów i wersjami audio - dostępne na twoim mobilnym urządzeniu."
         button h4: "Przejdź do Bible.com/app"
         button h4 sub: "Na twoim urządzeniu mobilnym"
@@ -979,6 +983,7 @@ pl:
         symbian: "Symbian"
         mobile web: "Sieć mobilna"
         amazon: "Kindle Fire"
+        free overlay: "100% Free"
     pages: 
         generic_error: 
             title: "Ups!"
@@ -1000,7 +1005,7 @@ pl:
                 subscribe heading: "Zapisz się do planów Biblii."
                 subscribe description: "Przeglądnij całą Biblię, skup się na temacie lub czytaj przemyślenia uzdolnionych nauczycieli. Wybierz plan a każdego dnia otrzymasz odpowiedni fragment Biblii."
                 download heading: "Weź tę Biblię ze sobą."
-                download description: "<a href='https://bible.com/download'>Download</a> the Bible App for free on any mobile device. When you use the mobile app, your notes, bookmarks, highlights, plans, and more will be automatically synced across all of your devices."
+                download description: "<a href='https://bible.com/download'>Pobierz</a> Aplikację Biblii za darmo na dowolne urządzenie. Używaj aplikacji, notatek, zakładek, podkreśleń, planów czytania i innych funkcji a twoje treści będą automatycznie synchronizowane."
             get started: "Użyj swojego darmowego konta."
             word with you: "Słowo Boże jest z tobą."
             download action: "Pobierz Aplikację Biblii"
